--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+}
+
+.main {
+  width: 80%;
+  margin: auto;
+  padding-top: 60px;
+}
+
+.autocompleter-wrapper {
+  border: 1px solid #eaeaea;
+  box-shadow: 1px 4px 10px #eaeaea;
+  border-radius: 5px;
+  margin-top: 3px;
+  max-height: 458px;
+  overflow: scroll;
+}
+
+.tag-input-wrapper {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  flex-wrap: wrap;
+  border: 1px solid #ddd;
+  border-radius: 20px;
+  min-height: 43px;
 }
